# deploy-app-with-docker

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
