[tool.poetry]
name = "etl-with-python-and-duckdb"
version = "0.1.0"
description = ""
authors = ["Lorenzo Uriel <lorenzo.uriel@geosiga.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
